--- a/css/style.css
+++ b/css/style.css
@@ -54,7 +54,7 @@ li a:active {
 }
 
 li a.current{
-  background-color:#b4b815;
+  background-color:#dadf0c;
   font-style:italic;
   color:black;
 }
@@ -120,35 +120,6 @@ li a.current{
   display:block;
 }
 
-.experiences_left {
-  display:grid;
-  grid-template-columns:3fr 1fr;
-  padding: 10px;
-  border-style:solid;
-  border-width:3px;
-  border-color:#1f2890;
-  margin:5px;
-}
-
-.experiences_right {
-  display:grid;
-  grid-template-columns:1fr 3fr;
-  padding: 10px;
-  border-style:solid;
-  border-width:3px;
-  border-color:#1f2890;
-  margin:5px;
-}
-
-.experiences img {
-  height:150px;
-}
-
-.skills {
-  display:grid;
-  grid-template-columns: 1fr 1fr 1fr;
-}
-
 .skills div {
   padding: 15px;
   border-style:solid;
@@ -170,4 +141,45 @@ li a.current{
 .gallery {
   display:grid;
   grid-template-columns: 1fr 1fr 1fr;
+}
+
+.experiences img {
+  height:150px;
+}
+
+.experiences_left {
+  padding: 10px;
+  border-style:solid;
+  border-width:3px;
+  border-color:#1f2890;
+  margin:5px;
+  text-align:center;
+}
+
+.experiences_right {
+  padding: 10px;
+  border-style:solid;
+  border-width:3px;
+  border-color:#1f2890;
+  margin:5px;
+  text-align:center;
+}
+
+@media screen and (min-width:776px) {
+  .skills {
+    display:grid;
+    grid-template-columns: 1fr 1fr 1fr;
+  }
+
+  .experiences_left {
+    display:grid;
+    grid-template-columns:3fr 1fr;
+    text-align:left;
+  }
+
+  .experiences_right {
+    display:grid;
+    grid-template-columns:1fr 3fr;
+    text-align:right;
+  }
 }
