--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,5 @@
-nav a {
+header, footer {
   background-color:#1f2890;
-  display:block;
-  float:left;
 }
 
 h1 {
@@ -13,12 +11,34 @@ p {
   font-family:'Indie Flower', serif;
 }
 
-.main_nav {
-  list-style-type: none;
-  margin: 5px;
-  padding: 0;
-  overflow: hidden;
-  background-color: #1f2890;
+nav ul li{
+	border: 2px solid black;
+	min-height: 50px;
+	line-height: 50px;
+	text-align: center;
+  align-items:center;
+}
+
+nav ul li a {
+  display:block;
+  padding:10px;
+  text-align:center;
+  text-decoration:none;
+  color:white;
+}
+
+.main_nav li a:hover {
+  background-color:#4c55bb;
+}
+
+.main_nav li a:active {
+  background-color:#e0e422;
+}
+
+.main_nav li a.current{
+  background-color:#dadf0c;
+  font-style:italic;
+  color:black;
 }
 
 #offpage {
@@ -34,90 +54,6 @@ p {
   position:static;
   width:auto;
   height:auto;
-}
-
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-  border-right: 1px solid #bbb;
-}
-
-li a:hover {
-  background-color:#4c55bb;
-}
-
-li a:active {
-  background-color:#e0e422;
-}
-
-li a.current{
-  background-color:#dadf0c;
-  font-style:italic;
-  color:black;
-}
-
-.home_container{
-  display:grid;
-  grid-template-columns:repeat(3,1fr);
-}
-
-/* .home_container > div {
-  background:#eee;
-}
-
-.home_container > div:nth-child(odd) {
-  background:#ddd;
-} */
-
-.home_container img {
-  object-fit:cover;
-  max-height:100%;
-  width:100%;
-}
-
-
-.box2_navigation {
-  grid-column:2/span 2;
-  grid-row:1/span 1;
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  display:block;
-}
-
-.box3_welcome {
-  grid-column:1/span3;
-  grid-row:2/span 1;
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  display:block;
-}
-
-.box3_welcome h1 {
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  display:block;
-}
-
-.box3_welcome p {
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  display:block;
-}
-
-.box4_footer {
-  grid-column:1/span 3;
-  grid-row:3/span 1;
-  width:100%;
-  height:100%;
-  object-fit:cover;
-  display:block;
 }
 
 .skills div {
@@ -181,5 +117,25 @@ li a.current{
     display:grid;
     grid-template-columns:1fr 3fr;
     text-align:right;
+  }
+
+  nav ul {
+    display:flex;
+    justify-content:flex-end;
+  }
+
+  nav ul li {
+    display:block;
+    min-height:25px;
+    line-height:25px;
+    border-width:2px;
+    text-align:center;
+  }
+
+  header {
+    padding:10px;
+    display:flex;
+    justify-content:space-between;
+    align-items:center;
   }
 }
