--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,8 @@ header, footer {
   background-color:#1f2890;
 }
 
-.home {
-  background-image:url("imgs/wolv_court.jpg");
+footer p {
+  color:white;
 }
 
 h1 {
