--- a/final_proj/css/style.css
+++ b/final_proj/css/style.css
@@ -355,7 +355,9 @@ img.hover-shadow {
 
   nav ul {
     display:flex;
-    justify-content:flex-end;
+    justify-content:flex;
+    width:100%;
+    background-color:#1f2890;
   }
 
   nav ul li {
@@ -367,10 +369,12 @@ img.hover-shadow {
   }
 
   header {
-    padding:10px;
+    /* padding:10px;
     display:flex;
     justify-content:space-between;
-    align-items:center;
+    align-items:center; */
+    width:100%;
+    background-color:#1f2890;
   }
 
   .accordion {
