--- a/final_proj/css/style.css
+++ b/final_proj/css/style.css
@@ -307,6 +307,160 @@ img.hover-shadow {
 }
 /* END CODE FOR MDOAL LIGHTBOX */
 
+/* START CODE FOR HTML5 CUSTOM VIDEO PLAYER */
+.player {
+  max-width: 800px;
+  border: 6px solid rgba(255, 255, 255, 0.2);
+  box-shadow: 0 0 25px rgba(0, 0, 0, 0.1), 0 3px 3px rgba(0, 0, 0, 0.1);
+  position: relative;
+  overflow: hidden;
+  background-color:#1f2890;
+}
+.player:hover .progress {
+  height: 10px;
+}
+.player:hover .player-controls {
+  -webkit-transform: translateY(0);
+          transform: translateY(0);
+}
+
+.player:-webkit-full-screen,
+.player:-webkit-full-screen {
+  max-width: none;
+  width: 100%;
+}
+
+.player:-webkit-full-screen,
+.player:fullscreen {
+  max-width: none;
+  width: 100%;
+}
+
+.play-btn {
+  flex: 1;
+}
+
+.player-video {
+  width: 100%;
+  display: block;
+}
+
+.player-btn {
+  background: none;
+  border: 0;
+  color: white;
+  text-align: center;
+  max-width: 60px;
+  padding: 5px 8px;
+}
+.player-btn svg {
+  fill: #FFFFFF;
+}
+.player-btn:hover, .player-btn:focus {
+  border-color: #FFEC41;
+  background: rgba(255, 255, 255, 0.2);
+}
+
+.player-slider {
+  width: 10px;
+  height: 30px;
+}
+
+.player-controls {
+  align-items: center;
+  display: flex;
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  -webkit-transform: translateY(100%) translateY(-5px);
+          transform: translateY(100%) translateY(-5px);
+  transition: all 0.3s;
+  flex-wrap: wrap;
+  background: rgba(0, 0, 0, 0.3);
+}
+
+.player-controls > * {
+  flex: 1;
+}
+
+.progress {
+  position: relative;
+  display: flex;
+  flex: 10;
+  flex-basis: 100%;
+  height: 4px;
+  transition: height 0.3s;
+  background: rgba(0, 0, 0, 0.5);
+}
+
+.filled-progress {
+  width: 50%;
+  background: #FFEC41;
+  flex: 0;
+  flex-basis: 50%;
+}
+
+.sliders {
+  max-width: 200px;
+  display: flex;
+}
+
+input[type=range] {
+  -webkit-appearance: none;
+  background: transparent;
+  width: 100%;
+  margin: 0 5px;
+}
+
+input[type=range]:focus {
+  outline: none;
+}
+
+input[type=range]::-webkit-slider-runnable-track {
+  width: 100%;
+  height: 8px;
+  cursor: pointer;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0 0 1px rgba(13, 13, 13, 0);
+  background: rgba(255, 255, 255, 0.5);
+  border-radius: 10px;
+  border: 0.2px solid rgba(1, 1, 1, 0);
+}
+
+input[type=range]::-webkit-slider-thumb {
+  height: 15px;
+  width: 15px;
+  border-radius: 50px;
+  background: white;
+  cursor: pointer;
+  -webkit-appearance: none;
+  margin-top: -3.5px;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.5);
+}
+
+input[type=range]:focus::-webkit-slider-runnable-track {
+  background: rgba(255, 255, 255, 0.8);
+}
+
+input[type=range]::-moz-range-track {
+  width: 100%;
+  height: 8px;
+  cursor: pointer;
+  box-shadow: 1px 1px 1px rgba(0, 0, 0, 0), 0 0 1px rgba(13, 13, 13, 0);
+  background: #ffffff;
+  border-radius: 10px;
+  border: 0.2px solid rgba(1, 1, 1, 0);
+}
+
+input[type=range]::-moz-range-thumb {
+  box-shadow: 0 0 3px rgba(0, 0, 0, 0), 0 0 1px rgba(13, 13, 13, 0);
+  height: 15px;
+  width: 15px;
+  border-radius: 50px;
+  background: white;
+  cursor: pointer;
+}
+/* END CODE FOR CUSTOM HTML5 VIDEO PLAYER */
+
 /* below rules only apply for screens larger than 400px (tablet displays) */
 @media screen and (min-width:450px) {
   .skills {
