--- a/final_proj/css/style.css
+++ b/final_proj/css/style.css
@@ -37,12 +37,12 @@ footer p {
 }
 
 h1 {
-  font-family: 'Major Mono Display', serif;
+  font-family: 'Playfair Display', serif;
   font-size:200%;
 }
 
-p {
-  font-family:'Indie Flower', serif;
+p, .experiences button {
+  font-family:'Libre Baskerville', serif;
 }
 
 nav ul li{
@@ -54,12 +54,17 @@ nav ul li{
   background-color:#1f2890;
 }
 
-nav ul li a {
+nav ul li a, nav ul li i {
   display:block;
   padding:10px;
   text-align:center;
   text-decoration:none;
   color:white;
+  font-family: 'Playfair Display', serif;
+}
+
+.hidden {
+  display:none;
 }
 
 .sticky {
@@ -153,19 +158,15 @@ nav ul li a {
   display:none;
 }
 
-.accordion {
-  background-color: #eee;
-  color: #444;
+.accordion, .active {
+  background-color: #dadf0c;
+  color: black;
   padding:18px;
   width:100%;
   text-align:left;
   border-style:solid;
   border-color:black;
   transition:.4s;
-}
-
-.active, .accordion:hover {
-  background-color:#ccc;
 }
 
 .wolv-plug {
@@ -309,12 +310,12 @@ img.hover-shadow {
 
 /* START CODE FOR HTML5 CUSTOM VIDEO PLAYER */
 .player {
-  max-width: 800px;
   border: 6px solid rgba(255, 255, 255, 0.2);
   box-shadow: 0 0 25px rgba(0, 0, 0, 0.1), 0 3px 3px rgba(0, 0, 0, 0.1);
   position: relative;
   overflow: hidden;
   background-color:#1f2890;
+  width:100%;
 }
 .player:hover .progress {
   height: 10px;
@@ -474,6 +475,18 @@ input[type=range]::-moz-range-thumb {
 
   .gallery img {
     max-height:200px;
+  }
+
+  .icon {
+    display:none;
+  }
+
+  #hidden {
+    display:inline-block;
+  }
+
+  .alive {
+    display:inline-block;
   }
 }
 
